# Allocation

./: .clang-format  .env  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  CODE_REVIEW.md  CRITICAL_ISSUES_DEMO.cpp  Dockerfile  LICENSE  Makefile  PROPOSED_FIXES.md  README.md  ThreadSafetyTest.cpp  conanfile.py  conanfile.txt  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 0-default.yml
.github/workflows/: ci.yml  docker.yaml
Tests/: TestAllocate.cpp  TestBatches.cpp  TestDataMappers.cpp  TestRepository.cpp  mainTests.cpp
Tests/E2E/: TestAPI.cpp  TestApi.py  TestExternalEvents.cpp  TestExternalEvents.cpp_
Tests/Integration/: TestDataMappers.cpp  TestRepository.cpp  TestUnitOfWork.cpp  TestViews.cpp
Tests/Unit/: TestAllocate.cpp  TestBatches.cpp  TestHandlers.cpp  TestProduct.cpp  TestServices.cpp
Tests/Utilities/: ApiClient.cpp  ApiClient.h  ApiClient.hpp  CommonFunctions.cpp  CommonFunctions.h  CommonFunctions.hpp  RedisClient.cpp  RedisClient.h  RedisClient.hpp  SqlFixture.cpp  SqlFixture.h  SqlFixture.hpp  UoWFixture.cpp  UoWFixture.h
configs/: Allocation.ini
docs/api/: api.yaml  async.yaml
postgresql/schemas/: db-1.sql
src/: Forwards.h  Precompile.h  Precompile.hpp  Server.cpp  Server.hpp  main.cpp
src/Adapters/Database/: DatabaseConfig.hpp  DbTables.cpp  DbTables.h  DbTables.hpp
src/Adapters/Database/Include/: Common.h
src/Adapters/Database/Mappers/: BatchMapper.cpp  BatchMapper.h  BatchMapper.hpp  OrderLineMapper.cpp  OrderLineMapper.h  OrderLineMapper.hpp  ProductMapper.cpp  ProductMapper.h  ProductMapper.hpp
src/Adapters/Database/Session/: ConnectionConfig.h  ConnectionConfig.hpp  DatabaseSessionPool.cpp  DatabaseSessionPool.hpp  SessionPool.cpp  SessionPool.h  SessionPool.hpp
src/Adapters/Database/Source/: Common.cpp  DbTables.cpp
src/Adapters/Email/: Email.cpp  Email.h  Email.hpp
src/Adapters/Notification/: EmailNotifications.hpp  NotificationHandler.hpp
src/Adapters/Redis/: ClientFactory.cpp  ClientFactory.hpp  ClientPool.cpp  ClientPool.hpp  PublisherHandler.hpp  RedisConfig.hpp  RedisConnectionPool.hpp  RedisEventPublisher.cpp  RedisEventPublisher.h  RedisEventPublisher.hpp
src/Adapters/Repository/: FakeRepository.cpp  FakeRepository.h  FakeRepository.hpp  SqlRepository.cpp  SqlRepository.h  SqlRepository.hpp  TrackingRepository.cpp  TrackingRepository.h  TrackingRepository.hpp
src/Adapters/Repository/Include/: FakeRepository.h  SqlLiteRepository.h  SqlRepository.h
src/Adapters/Repository/Source/: FakeRepository.cpp  SqlRepository.cpp  (+1 more)
src/Domain/: Batch.cpp  Batch.h  OrderlLine.cpp  OutOfStock.h  Parsers.cpp  Parsers.hpp
src/Domain/Commands/: AbstractCommand.h  AbstractCommand.hpp  Allocate.h  Allocate.hpp  ChangeBatchQuantity.h  ChangeBatchQuantity.hpp  CreateBatch.h  CreateBatch.hpp
src/Domain/Events/: AbstractEvent.h  AbstractEvent.hpp  Allocated.h  Allocated.hpp  AllocationRequired.h  BatchCreated.h  BatchQuantityChanged.h  Deallocated.hpp  IEvent.h  OutOfStock.h  OutOfStock.hpp
src/Domain/Exceptions/: OutOfStock.h
src/Domain/Include/: Batch.h  Model.h  ModelLayer.h  OrderLine.h
src/Domain/Ports/: IMessage.h  IMessage.hpp  IRepository.h  IRepository.hpp  IUnitOfWork.h  IUnitOfWork.hpp  IUpdatableRepository.hpp
src/Domain/Product/: Batch.cpp  Batch.h  Batch.hpp  OrderLine.h  OrderLine.hpp  Product.cpp  Product.h  Product.hpp
src/Domain/Source/: Batch.cpp
src/Entrypoints/REST/: HandlerFactory.cpp  HandlerFactory.hpp
src/Entrypoints/Redis/: Handlers.cpp  Handlers.hpp  RedisListener.hpp  RedisListenerModule.cpp  RedisListenerModule.hpp
src/Infrastructure/Config/: Allocation.ini
src/Infrastructure/Redis/: RedisConfig.cpp  RedisConfig.h  RedisConfig.hpp  RedisListenerModule.cpp  RedisListenerModule.h  RedisListenerModule.hpp
src/Infrastructure/Server/: HandlerFactory.cpp  HandlerFactory.h  HandlerFactory.hpp  Server.cpp  Server.h  Server.hpp
src/Infrastructure/Services/: Views.cpp  Views.hpp
src/ServiceLayer/: Exceptions.hpp  PocoLogger.hpp  Views.cpp  Views.hpp
src/ServiceLayer/MessageBus/: MessageBus.cpp  MessageBus.hpp
src/ServiceLayer/UoW/: AbstractUnitOfWork.cpp  AbstractUnitOfWork.hpp  SqlUnitOfWork.hpp
src/Services/: Exceptions.hpp  Services.cpp  Services.h  Views.cpp  Views.h  Views.hpp
src/Services/EventBus/: EventBus.cpp  EventBus.h  Handlers.cpp  Handlers.h
src/Services/Exceptions/: InvalidSku.h  InvalidSku.hpp
src/Services/Include/: InvalidSku.h  Services.h
src/Services/Loggers/: FakeLogger.h  FakeLogger.hpp  ILogger.cpp  ILogger.h  ILogger.hpp  PocoLogger.h  PocoLogger.hpp
src/Services/MessageBus/: Handlers.cpp  Handlers.h  Handlers.hpp  MessageBus.cpp  MessageBus.h  MessageBus.hpp
src/Services/Source/: Services.cpp
src/Services/UoW/: AbstractUnitOfWork.cpp  AbstractUnitOfWork.h  AbstractUnitOfWork.hpp  FakeUnitOfWork.cpp  FakeUnitOfWork.h  FakeUnitOfWork.hpp  SqlUnitOfWork.cpp  SqlUnitOfWork.h  SqlUnitOfWork.hpp
src/Test/: main_test.cpp
src/Test/Integration/: Repository_test.cpp  UnitOfWork_test.cpp  Views_test.cpp
src/Test/Unit/: Batches_test.cpp  FakeRepository_test.cpp  FakeRepository_test.hpp  FakeUnitOfWork_test.hpp  Handlers_test.cpp  Product_test.cpp
src/Test/Utilities/: Common_test.cpp  Common_test.hpp  FakeLogger_test.hpp  FakeNotifications.hpp  FakeRepository_test.cpp  FakeRepository_test.hpp
src/Tests/: main_test.cpp
src/Tests/Integration/: Repository_test.cpp  UnitOfWork_test.cpp  Views_test.cpp
src/Tests/Unit/: Batches_test.cpp  Handlers_test.cpp  Product_test.cpp
src/Tests/Utilities/: Common_test.cpp  Common_test.hpp  DatabaseFixture_test.hpp  FakeLogger_test.hpp  FakeRepository_test.cpp  FakeRepository_test.hpp  FakeUnitOfWork_test.hpp  InitDatabase_test.hpp
src/Utilities/: Common.cpp  Common.h  Common.hpp  ConfigReaders.cpp  ConfigReaders.hpp  OrderLineHash.h
src/Utilities/Loggers/: ILogger.cpp  ILogger.hpp
tests/: config.py  requirements.txt
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_external_events.py
(+52 files in other folders)
